Structure of page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="City computer institute">
+    <meta name="Description" content="This page is to explain about the git hub operation">
     <title>GitHub</title>
 </head>
 <body>
+    <header>
+        <h1>This is from heading </h1>
+    </header>
     <h1>This is to explain the GitHub</h1>
-    
+    <main>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, recusandae labore natus aperiam laborum fugiat vel obcaecati, officiis quod officia a tenetur ipsum dignissimos pariatur nam voluptate error accusamus aspernatur?
+        </p>
+    </main>
+    <footer>
+        <h3>contct</h3>
+        <address>
+            City computer institute
+            2floor, Vatsal appartment
+            opposite Bhaji Mandai
+            Vidyanagar 
+            Karad
+        </address>
+    </footer>
 </body>
 </html>
